--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,9 +28,9 @@
   }
   
   main {
-    display: flex;
+    /* display: flex; */
     /* flex-direction: row; */
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     /* align-items: stretch; */
   }
 
